--- a/sass/main.scss
+++ b/sass/main.scss
@@ -212,18 +212,38 @@ html{
     background-color: #917c67;
     justify-content: center;
     display: flex;
-    a{
+    @media all and (max-width: 600px){
+        padding-top: 30px;
+    }
+    a{ 
         justify-self: center;
         width: fit-content;
         height: fit-content;
         font-size: .6rem;
         transition: ease-in .3s;
         z-index: 400;
+        p{
+            @media all and (max-width: 600px){
+                display: none;
+            }
+        }
         @media all and (min-width: 600px){
             font-size: 1.2rem;
         }
+        @media all and (min-width: 1020px){
+            font-size: 2.2rem;
+        }
         &:hover{
             transform: scale(1.1);
+        }
+        img{
+            width: 270px;
+            max-width: 95%;
+            background-color: #6e6154;
+            border-radius: 20px;
+            @media all and (min-width: 600px){
+                display: none;
+            }
         }
     }
 }
@@ -390,6 +410,26 @@ html{
     }
     .galleryOn{
         border-radius: 30px 30px 0px 0px!important;
+    }
+    .videoSection{
+        margin-top: 50px;
+        background-color: #0f0f0f;
+        padding: 20px 0px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .video{
+            background-color: #3b3b3b;
+            width: 90%;
+            aspect-ratio: 16/9;
+            @media all and (min-width:700px){
+                width: 70%;
+            }
+            @media all and (min-width:1080px){
+                width: 60%;
+            }
+        }
     }
 }
 #infoProductos{
