--- a/sass/main.scss
+++ b/sass/main.scss
@@ -207,9 +207,9 @@ html{
     }
 }
 .tiendaVirtual{
-    margin-top: 20px;
     width: 100%;
     background-color: #917c67;
+    padding-top: 30px;
     justify-content: center;
     display: flex;
     @media all and (max-width: 600px){
@@ -234,7 +234,7 @@ html{
             font-size: 2.2rem;
         }
         &:hover{
-            transform: scale(1.1);
+            transform: scale(1.05);
         }
         img{
             width: 270px;
@@ -496,7 +496,7 @@ html{
 .textoProductos{
     display: flex;
     align-self: center;
-    width: 90%;
+    max-width: 90%;
     transition: ease-in-out .7s;
     margin: 30px 0px;
     overflow: hidden;
@@ -504,14 +504,86 @@ html{
     text-align: center;
     color: #352504;
     @media all and (min-width:700px){
-        width: 80%;
+        max-width: 80%;
         font-size: 1.4rem;
     }
     @media all and (min-width:1080px){
-        width: 60%;
+        max-width: 60%;
         font-size: 1.6rem;
     }
 }
 .productosBody{
     min-height: 200vh;
+}
+
+#Empresas{
+    display: flex;
+    flex-direction: column;
+    background-color: #382b12;
+    align-content: center;
+    text-align: center;
+    .textoProductos{color: #fafafa;text-align: center;}
+    .galleryEmpresas{
+        align-self: center;
+        display: flex;
+        height: 30vh;
+        max-height: fit-content;
+        width: 90%;
+        overflow-x: hidden;
+        -webkit-scrollbar: disabled;
+        scroll-behavior: smooth;
+        @media all and (min-width: 700px){
+            height: 40vh;
+        }
+        @media all and (min-width: 1000px){
+            height: 58vh;
+        }
+        &::-webkit-scrollbar {
+            display: none;
+        }
+        #scrollLeft{
+            z-index: 200;
+            position: inherit;
+            left: 0;
+            top: 0;
+        }
+        #scrollRight{
+            z-index: 200;
+            position: inherit;
+            right: 0;
+            top: 0;
+        }
+        .scrollButtons{
+            height: 100%;
+            width: 15%;
+            background-color: rgba($color: #0f0f0f, $alpha: 0.7);
+            border: none;
+            font-size: 2rem;
+            color: #fafafa;
+            cursor: pointer;
+            transition: ease .2s;
+            &:hover{
+                transform: scaleX(1.3);
+            }
+        }
+        #img-container{
+            background-color: #0f0f0f;
+            padding: 0 15%;
+            display: flex;
+            margin-left: -15%;
+            margin-right: -15%;
+            overflow-x: scroll;
+            scroll-behavior: smooth;
+            &::-webkit-scrollbar {
+                display: none;
+            }
+            img{
+                width: 80%;
+                object-fit: cover;
+                height: auto;
+                padding: 0 0.1%;
+            }
+        }
+        
+    }
 }
